fix overflow error on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 :root {
-  --ff: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  --ff: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
+    "Helvetica Neue", sans-serif;
   --primary: #15223b;
   --secondary: #309dff;
   --black: #060f2f;
@@ -67,6 +67,12 @@ section {
 .logo-container {
   width: 48px;
   aspect-ratio: 1/1;
+}
+
+@media screen and (max-width: 750px) {
+  section {
+    --section-block-p: 0rem;
+  }
 }
 
 .nav-name + ul,
@@ -181,7 +187,7 @@ section {
     justify-content: space-around;
     margin-inline: auto;
     width: 80%;
-    height: 35%;
+    /* height: 200px; */
     top: -15%;
     text-align: center;
   }
@@ -456,15 +462,13 @@ section {
   letter-spacing: -1%;
   transform: translateY(-10px);
   opacity: 0;
-  transition: transform 200ms ease-in-out, opacity 200ms ease-in-out,
-    max-height 200ms ease-in-out;
+  transition: transform 200ms ease-in-out, opacity 200ms ease-in-out, max-height 200ms ease-in-out;
   transition-delay: 0s, 0s, 100ms;
 }
 .open {
   opacity: 1;
   transform: translateY(0);
-  transition: transform 200ms ease-in-out, opacity 200ms ease-in-out,
-    max-height 200ms ease-in-out;
+  transition: transform 200ms ease-in-out, opacity 200ms ease-in-out, max-height 200ms ease-in-out;
   transition-delay: 0s, 100ms, 0s;
 }
 
